# DuckTinyCC

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.community-sim  Makefile  NEWS.md  PLAN_tcc_extension.md  README.Rmd  README.md  description.yml
.github/workflows/: MainDistributionPipeline.yml  community-install-mimic.yml
cmake/: gen_embedded_runtime.cmake
demo/: embed_r_demo.sh  embed_r_udf.c  ggplot2_cli_demo.sh  ggplot2_cli_udf.c  ggplot2_via_ducktinycc.R  jgd_capture_server.py  jgd_ducktinycc_demo.sh  jgd_ducktinycc_udf.c  jgd_terminal_server.c  r_udf_via_ducktinycc.R
docs/: C_FUNCTION_DOCS.md  LIFETIME_OWNERSHIP.md
scripts/: community_sim.sh  community_sim_build.sh  community_sim_run.sh  test_embedded_runtime.sh  test_unsafe_udf_control_flow.sh
src/: ducktinycc.c  tcc_module.c
src/include/: tcc_module.h
test/sql/: capi_quack.test  tcc_module_modes.test
